@@ -52,6 +52,8 @@ export(sjt.xtab)
 export(sjtab)
 export(view_df)
 import(ggplot2)
+importFrom(MASS,glm.nb)
+importFrom(MASS,lda)
 importFrom(broom,augment)
 importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
@@ -191,6 +193,7 @@ importFrom(stats,nobs)
 importFrom(stats,pchisq)
 importFrom(stats,pf)
 importFrom(stats,pnorm)
+importFrom(stats,poisson)
 importFrom(stats,ppoints)
 importFrom(stats,prcomp)
 importFrom(stats,predict)
